parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> programa
Rule 1     programa -> NP1_DirProced definicion INICIO NP7_Inicio LLAVE_IZQ instruccion LLAVE_DER definicion imprimir
Rule 2     definicion -> definicionP
Rule 3     definicion -> empty
Rule 4     definicionP -> funcion definicion
Rule 5     definicionP -> declaracion definicion
Rule 6     instruccion -> declaracion PUNTOYCOMA instruccion
Rule 7     instruccion -> llamada PUNTOYCOMA instruccion
Rule 8     instruccion -> asignacion PUNTOYCOMA instruccion
Rule 9     instruccion -> condicion instruccion
Rule 10    instruccion -> ciclo instruccion
Rule 11    instruccion -> empty
Rule 12    imprimir -> <empty>
Rule 13    funcion -> FUNC funcionP
Rule 14    NP1_DirProced -> <empty>
Rule 15    funcionP -> VOID cuerpo_funcion
Rule 16    funcionP -> tipo cuerpo_funcion REGRESA expresion
Rule 17    NP2_NombreFunc -> <empty>
Rule 18    cuerpo_funcion -> ID NP2_NombreFunc PAREN_IZQ parametro PAREN_DER LLAVE_IZQ instruccion LLAVE_DER
Rule 19    parametro -> tipo ID NP3_Parametros otroParametro
Rule 20    parametro -> empty
Rule 21    otroParametro -> COMA parametro otroParametro
Rule 22    otroParametro -> empty
Rule 23    declaracion -> tipo declaracionP
Rule 24    declaracionP -> ID NP4_Variable declaracionPPP declaracionPP
Rule 25    declaracionPP -> COMA declaracionP
Rule 26    declaracionPP -> empty
Rule 27    NP7_Inicio -> <empty>
Rule 28    declaracionPPP -> ASIGNACION expresion
Rule 29    declaracionPPP -> declaracion_lista NP6_Lista
Rule 30    declaracionPPP -> empty
Rule 31    declaracion_lista -> ASIGNACION lista
Rule 32    declaracion_lista -> CORCHETE_IZQ CTE_INT CORCHETE_DER
Rule 33    NP3_Parametros -> <empty>
Rule 34    asignacion -> ID asignacionP ASIGNACION expresion
Rule 35    asignacionP -> CORCHETE_IZQ expresion CORCHETE_DER
Rule 36    asignacionP -> empty
Rule 37    condicion -> SI PAREN_IZQ expresion PAREN_DER LLAVE_IZQ instruccion LLAVE_DER condicionP
Rule 38    condicionP -> SINO condicionPP
Rule 39    condicionP -> empty
Rule 40    NP4_Variable -> <empty>
Rule 41    condicionPP -> LLAVE_IZQ instruccion LLAVE_DER
Rule 42    condicionPP -> condicion
Rule 43    ciclo -> MIENTRAS PAREN_IZQ expresion PAREN_DER LLAVE_IZQ instruccion LLAVE_DER
Rule 44    ciclo -> REPETIR repetir LLAVE_IZQ instruccion LLAVE_DER
Rule 45    repetir -> expresion
Rule 46    llamada -> funcionEspecial
Rule 47    llamada -> ID LLAVE_IZQ llamadaP LLAVE_DER
Rule 48    llamadaP -> expresion llamadaPP
Rule 49    llamadaP -> empty
Rule 50    llamadaPP -> COMA llamadaP
Rule 51    llamadaPP -> empty
Rule 52    NP6_Lista -> <empty>
Rule 53    expresion -> subExp expresionP
Rule 54    expresionP -> OP_Y expresion
Rule 55    expresionP -> OP_O expresion
Rule 56    expresionP -> empty
Rule 57    subExp -> subExpP exp subExpPP
Rule 58    subExpP -> NEGACION
Rule 59    subExpP -> empty
Rule 60    subExpPP -> comparador exp
Rule 61    subExpPP -> empty
Rule 62    exp -> termino expP
Rule 63    expP -> MAS termino
Rule 64    expP -> MENOS termino
Rule 65    expP -> empty
Rule 66    termino -> factor terminoP
Rule 67    terminoP -> MULTI termino
Rule 68    terminoP -> DIV termino
Rule 69    terminoP -> RESIDUO termino
Rule 70    terminoP -> empty
Rule 71    comparador -> MENOR
Rule 72    comparador -> MAYOR
Rule 73    comparador -> IGUAL
Rule 74    comparador -> DIFERENTE
Rule 75    comparador -> MENOR_IGUAL
Rule 76    comparador -> MAYOR_IGUAL
Rule 77    constante -> NULO
Rule 78    constante -> CTE_INT
Rule 79    constante -> CTE_DEC
Rule 80    constante -> CTE_STRING
Rule 81    constante -> boolean
Rule 82    factor -> PAREN_IZQ expresion PAREN_DER
Rule 83    factor -> opAritmetico valor
Rule 84    opAritmetico -> MAS
Rule 85    opAritmetico -> MENOS
Rule 86    opAritmetico -> empty
Rule 87    lista -> CORCHETE_IZQ listaVacia CORCHETE_DER
Rule 88    listaP -> COMA expresion listaP
Rule 89    listaP -> empty
Rule 90    listaVacia -> expresion listaP
Rule 91    listaVacia -> empty
Rule 92    valor -> llamada
Rule 93    valor -> ID
Rule 94    valor -> constante
Rule 95    tipo -> VAR_INT
Rule 96    tipo -> VAR_DEC
Rule 97    tipo -> VAR_STRING
Rule 98    tipo -> VAR_BOOL
Rule 99    boolean -> VERDADERO
Rule 100   boolean -> FALSO
Rule 101   funcionEspecial -> COLOCAR PAREN_IZQ expresion COMA expresion COMA expresion PAREN_DER
Rule 102   funcionEspecial -> MOVER PAREN_IZQ expresion PAREN_DER
Rule 103   funcionEspecial -> ROTAR PAREN_IZQ expresion PAREN_DER
Rule 104   funcionEspecial -> GIRAR_DER PAREN_IZQ PAREN_DER
Rule 105   funcionEspecial -> GIRAR_IZQ PAREN_IZQ PAREN_DER
Rule 106   funcionEspecial -> CAMINO_LIBRE PAREN_IZQ PAREN_DER
Rule 107   funcionEspecial -> DETECCION PAREN_IZQ PAREN_DER
Rule 108   funcionEspecial -> OCULTAR PAREN_IZQ expresion PAREN_DER
Rule 109   funcionEspecial -> POSICION PAREN_IZQ expresion COMA expresion PAREN_DER
Rule 110   funcionEspecial -> MAPA_CUAD PAREN_IZQ expresion PAREN_DER
Rule 111   funcionEspecial -> RECOGER_OBJ PAREN_IZQ PAREN_DER
Rule 112   funcionEspecial -> DEJAR_OBJ PAREN_IZQ PAREN_DER
Rule 113   funcionEspecial -> SALTAR PAREN_IZQ PAREN_DER
Rule 114   funcionEspecial -> MATAR_ENEMY PAREN_IZQ PAREN_DER
Rule 115   funcionEspecial -> COLOR PAREN_IZQ expresion PAREN_DER
Rule 116   funcionEspecial -> TRAZO PAREN_IZQ expresion COMA expresion PAREN_DER
Rule 117   funcionEspecial -> LEER PAREN_IZQ leerP PAREN_DER
Rule 118   funcionEspecial -> ESCRIBIR PAREN_IZQ expresion PAREN_DER
Rule 119   funcionEspecial -> MOSTRAR_VALOR PAREN_IZQ expresion PAREN_DER
Rule 120   funcionEspecial -> FIN PAREN_IZQ PAREN_DER
Rule 121   leerP -> expresion
Rule 122   leerP -> empty
Rule 123   empty -> <empty>

Terminals, with rules where they appear

ASIGNACION           : 28 31 34
CAMINO_LIBRE         : 106
COLOCAR              : 101
COLOR                : 115
COMA                 : 21 25 50 88 101 101 109 116
CORCHETE_DER         : 32 35 87
CORCHETE_IZQ         : 32 35 87
CTE_DEC              : 79
CTE_INT              : 32 78
CTE_STRING           : 80
DEJAR_OBJ            : 112
DETECCION            : 107
DIFERENTE            : 74
DIV                  : 68
ESCRIBIR             : 118
FALSO                : 100
FIN                  : 120
FUNC                 : 13
GIRAR_DER            : 104
GIRAR_IZQ            : 105
ID                   : 18 19 24 34 47 93
IGUAL                : 73
INICIO               : 1
LEER                 : 117
LLAVE_DER            : 1 18 37 41 43 44 47
LLAVE_IZQ            : 1 18 37 41 43 44 47
MAPA_CUAD            : 110
MAS                  : 63 84
MATAR_ENEMY          : 114
MAYOR                : 72
MAYOR_IGUAL          : 76
MENOR                : 71
MENOR_IGUAL          : 75
MENOS                : 64 85
MIENTRAS             : 43
MOSTRAR_VALOR        : 119
MOVER                : 102
MULTI                : 67
NEGACION             : 58
NULO                 : 77
OCULTAR              : 108
OP_O                 : 55
OP_Y                 : 54
PAREN_DER            : 18 37 43 82 101 102 103 104 105 106 107 108 109 110 111 112 113 114 115 116 117 118 119 120
PAREN_IZQ            : 18 37 43 82 101 102 103 104 105 106 107 108 109 110 111 112 113 114 115 116 117 118 119 120
POSICION             : 109
PUNTOYCOMA           : 6 7 8
RECOGER_OBJ          : 111
REGRESA              : 16
REPETIR              : 44
RESIDUO              : 69
ROTAR                : 103
SALTAR               : 113
SI                   : 37
SINO                 : 38
TRAZO                : 116
VAR_BOOL             : 98
VAR_DEC              : 96
VAR_INT              : 95
VAR_STRING           : 97
VERDADERO            : 99
VOID                 : 15
error                : 

Nonterminals, with rules where they appear

NP1_DirProced        : 1
NP2_NombreFunc       : 18
NP3_Parametros       : 19
NP4_Variable         : 24
NP6_Lista            : 29
NP7_Inicio           : 1
asignacion           : 8
asignacionP          : 34
boolean              : 81
ciclo                : 10
comparador           : 60
condicion            : 9 42
condicionP           : 37
condicionPP          : 38
constante            : 94
cuerpo_funcion       : 15 16
declaracion          : 5 6
declaracionP         : 23 25
declaracionPP        : 24
declaracionPPP       : 24
declaracion_lista    : 29
definicion           : 1 1 4 5
definicionP          : 2
empty                : 3 11 20 22 26 30 36 39 49 51 56 59 61 65 70 86 89 91 122
exp                  : 57 60
expP                 : 62
expresion            : 16 28 34 35 37 43 45 48 54 55 82 88 90 101 101 101 102 103 108 109 109 110 115 116 116 118 119 121
expresionP           : 53
factor               : 66
funcion              : 4
funcionEspecial      : 46
funcionP             : 13
imprimir             : 1
instruccion          : 1 6 7 8 9 10 18 37 41 43 44
leerP                : 117
lista                : 31
listaP               : 88 90
listaVacia           : 87
llamada              : 7 92
llamadaP             : 47 50
llamadaPP            : 48
opAritmetico         : 83
otroParametro        : 19 21
parametro            : 18 21
programa             : 0
repetir              : 44
subExp               : 53
subExpP              : 57
subExpPP             : 57
termino              : 62 63 64 67 68 69
terminoP             : 66
tipo                 : 16 19 23
valor                : 83

Parsing method: LALR

state 0

    (0) S' -> . programa
    (1) programa -> . NP1_DirProced definicion INICIO NP7_Inicio LLAVE_IZQ instruccion LLAVE_DER definicion imprimir
    (14) NP1_DirProced -> .

    FUNC            reduce using rule 14 (NP1_DirProced -> .)
    VAR_INT         reduce using rule 14 (NP1_DirProced -> .)
    VAR_DEC         reduce using rule 14 (NP1_DirProced -> .)
    VAR_STRING      reduce using rule 14 (NP1_DirProced -> .)
    VAR_BOOL        reduce using rule 14 (NP1_DirProced -> .)
    INICIO          reduce using rule 14 (NP1_DirProced -> .)

    programa                       shift and go to state 1
    NP1_DirProced                  shift and go to state 2

state 1

    (0) S' -> programa .



state 2

    (1) programa -> NP1_DirProced . definicion INICIO NP7_Inicio LLAVE_IZQ instruccion LLAVE_DER definicion imprimir
    (2) definicion -> . definicionP
    (3) definicion -> . empty
    (4) definicionP -> . funcion definicion
    (5) definicionP -> . declaracion definicion
    (123) empty -> .
    (13) funcion -> . FUNC funcionP
    (23) declaracion -> . tipo declaracionP
    (95) tipo -> . VAR_INT
    (96) tipo -> . VAR_DEC
    (97) tipo -> . VAR_STRING
    (98) tipo -> . VAR_BOOL

    INICIO          reduce using rule 123 (empty -> .)
    FUNC            shift and go to state 8
    VAR_INT         shift and go to state 10
    VAR_DEC         shift and go to state 11
    VAR_STRING      shift and go to state 12
    VAR_BOOL        shift and go to state 13

    definicion                     shift and go to state 3
    definicionP                    shift and go to state 4
    empty                          shift and go to state 5
    funcion                        shift and go to state 6
    declaracion                    shift and go to state 7
    tipo                           shift and go to state 9

state 3

    (1) programa -> NP1_DirProced definicion . INICIO NP7_Inicio LLAVE_IZQ instruccion LLAVE_DER definicion imprimir

    INICIO          shift and go to state 14


state 4

    (2) definicion -> definicionP .

    INICIO          reduce using rule 2 (definicion -> definicionP .)
    $end            reduce using rule 2 (definicion -> definicionP .)


state 5

    (3) definicion -> empty .

    INICIO          reduce using rule 3 (definicion -> empty .)
    $end            reduce using rule 3 (definicion -> empty .)


state 6

    (4) definicionP -> funcion . definicion
    (2) definicion -> . definicionP
    (3) definicion -> . empty
    (4) definicionP -> . funcion definicion
    (5) definicionP -> . declaracion definicion
    (123) empty -> .
    (13) funcion -> . FUNC funcionP
    (23) declaracion -> . tipo declaracionP
    (95) tipo -> . VAR_INT
    (96) tipo -> . VAR_DEC
    (97) tipo -> . VAR_STRING
    (98) tipo -> . VAR_BOOL

    INICIO          reduce using rule 123 (empty -> .)
    $end            reduce using rule 123 (empty -> .)
    FUNC            shift and go to state 8
    VAR_INT         shift and go to state 10
    VAR_DEC         shift and go to state 11
    VAR_STRING      shift and go to state 12
    VAR_BOOL        shift and go to state 13

    funcion                        shift and go to state 6
    definicion                     shift and go to state 15
    definicionP                    shift and go to state 4
    empty                          shift and go to state 5
    declaracion                    shift and go to state 7
    tipo                           shift and go to state 9

state 7

    (5) definicionP -> declaracion . definicion
    (2) definicion -> . definicionP
    (3) definicion -> . empty
    (4) definicionP -> . funcion definicion
    (5) definicionP -> . declaracion definicion
    (123) empty -> .
    (13) funcion -> . FUNC funcionP
    (23) declaracion -> . tipo declaracionP
    (95) tipo -> . VAR_INT
    (96) tipo -> . VAR_DEC
    (97) tipo -> . VAR_STRING
    (98) tipo -> . VAR_BOOL

    INICIO          reduce using rule 123 (empty -> .)
    $end            reduce using rule 123 (empty -> .)
    FUNC            shift and go to state 8
    VAR_INT         shift and go to state 10
    VAR_DEC         shift and go to state 11
    VAR_STRING      shift and go to state 12
    VAR_BOOL        shift and go to state 13

    declaracion                    shift and go to state 7
    definicion                     shift and go to state 16
    definicionP                    shift and go to state 4
    empty                          shift and go to state 5
    funcion                        shift and go to state 6
    tipo                           shift and go to state 9

state 8

    (13) funcion -> FUNC . funcionP
    (15) funcionP -> . VOID cuerpo_funcion
    (16) funcionP -> . tipo cuerpo_funcion REGRESA expresion
    (95) tipo -> . VAR_INT
    (96) tipo -> . VAR_DEC
    (97) tipo -> . VAR_STRING
    (98) tipo -> . VAR_BOOL

    VOID            shift and go to state 18
    VAR_INT         shift and go to state 10
    VAR_DEC         shift and go to state 11
    VAR_STRING      shift and go to state 12
    VAR_BOOL        shift and go to state 13

    funcionP                       shift and go to state 17
    tipo                           shift and go to state 19

state 9

    (23) declaracion -> tipo . declaracionP
    (24) declaracionP -> . ID NP4_Variable declaracionPPP declaracionPP

    ID              shift and go to state 21

    declaracionP                   shift and go to state 20

state 10

    (95) tipo -> VAR_INT .

    ID              reduce using rule 95 (tipo -> VAR_INT .)


state 11

    (96) tipo -> VAR_DEC .

    ID              reduce using rule 96 (tipo -> VAR_DEC .)


state 12

    (97) tipo -> VAR_STRING .

    ID              reduce using rule 97 (tipo -> VAR_STRING .)


state 13

    (98) tipo -> VAR_BOOL .

    ID              reduce using rule 98 (tipo -> VAR_BOOL .)


state 14

    (1) programa -> NP1_DirProced definicion INICIO . NP7_Inicio LLAVE_IZQ instruccion LLAVE_DER definicion imprimir
    (27) NP7_Inicio -> .

    LLAVE_IZQ       reduce using rule 27 (NP7_Inicio -> .)

    NP7_Inicio                     shift and go to state 22

state 15

    (4) definicionP -> funcion definicion .

    INICIO          reduce using rule 4 (definicionP -> funcion definicion .)
    $end            reduce using rule 4 (definicionP -> funcion definicion .)


state 16

    (5) definicionP -> declaracion definicion .

    INICIO          reduce using rule 5 (definicionP -> declaracion definicion .)
    $end            reduce using rule 5 (definicionP -> declaracion definicion .)


state 17

    (13) funcion -> FUNC funcionP .

    FUNC            reduce using rule 13 (funcion -> FUNC funcionP .)
    VAR_INT         reduce using rule 13 (funcion -> FUNC funcionP .)
    VAR_DEC         reduce using rule 13 (funcion -> FUNC funcionP .)
    VAR_STRING      reduce using rule 13 (funcion -> FUNC funcionP .)
    VAR_BOOL        reduce using rule 13 (funcion -> FUNC funcionP .)
    INICIO          reduce using rule 13 (funcion -> FUNC funcionP .)
    $end            reduce using rule 13 (funcion -> FUNC funcionP .)


state 18

    (15) funcionP -> VOID . cuerpo_funcion
    (18) cuerpo_funcion -> . ID NP2_NombreFunc PAREN_IZQ parametro PAREN_DER LLAVE_IZQ instruccion LLAVE_DER

    ID              shift and go to state 24

    cuerpo_funcion                 shift and go to state 23

state 19

    (16) funcionP -> tipo . cuerpo_funcion REGRESA expresion
    (18) cuerpo_funcion -> . ID NP2_NombreFunc PAREN_IZQ parametro PAREN_DER LLAVE_IZQ instruccion LLAVE_DER

    ID              shift and go to state 24

    cuerpo_funcion                 shift and go to state 25

state 20

    (23) declaracion -> tipo declaracionP .

    FUNC            reduce using rule 23 (declaracion -> tipo declaracionP .)
    VAR_INT         reduce using rule 23 (declaracion -> tipo declaracionP .)
    VAR_DEC         reduce using rule 23 (declaracion -> tipo declaracionP .)
    VAR_STRING      reduce using rule 23 (declaracion -> tipo declaracionP .)
    VAR_BOOL        reduce using rule 23 (declaracion -> tipo declaracionP .)
    INICIO          reduce using rule 23 (declaracion -> tipo declaracionP .)
    $end            reduce using rule 23 (declaracion -> tipo declaracionP .)
    PUNTOYCOMA      reduce using rule 23 (declaracion -> tipo declaracionP .)


state 21

    (24) declaracionP -> ID . NP4_Variable declaracionPPP declaracionPP
    (40) NP4_Variable -> .

    ASIGNACION      reduce using rule 40 (NP4_Variable -> .)
    CORCHETE_IZQ    reduce using rule 40 (NP4_Variable -> .)
    COMA            reduce using rule 40 (NP4_Variable -> .)
    FUNC            reduce using rule 40 (NP4_Variable -> .)
    VAR_INT         reduce using rule 40 (NP4_Variable -> .)
    VAR_DEC         reduce using rule 40 (NP4_Variable -> .)
    VAR_STRING      reduce using rule 40 (NP4_Variable -> .)
    VAR_BOOL        reduce using rule 40 (NP4_Variable -> .)
    INICIO          reduce using rule 40 (NP4_Variable -> .)
    $end            reduce using rule 40 (NP4_Variable -> .)
    PUNTOYCOMA      reduce using rule 40 (NP4_Variable -> .)

    NP4_Variable                   shift and go to state 26

state 22

    (1) programa -> NP1_DirProced definicion INICIO NP7_Inicio . LLAVE_IZQ instruccion LLAVE_DER definicion imprimir

    LLAVE_IZQ       shift and go to state 27


state 23

    (15) funcionP -> VOID cuerpo_funcion .

    FUNC            reduce using rule 15 (funcionP -> VOID cuerpo_funcion .)
    VAR_INT         reduce using rule 15 (funcionP -> VOID cuerpo_funcion .)
    VAR_DEC         reduce using rule 15 (funcionP -> VOID cuerpo_funcion .)
    VAR_STRING      reduce using rule 15 (funcionP -> VOID cuerpo_funcion .)
    VAR_BOOL        reduce using rule 15 (funcionP -> VOID cuerpo_funcion .)
    INICIO          reduce using rule 15 (funcionP -> VOID cuerpo_funcion .)
    $end            reduce using rule 15 (funcionP -> VOID cuerpo_funcion .)


state 24

    (18) cuerpo_funcion -> ID . NP2_NombreFunc PAREN_IZQ parametro PAREN_DER LLAVE_IZQ instruccion LLAVE_DER
    (17) NP2_NombreFunc -> .

    PAREN_IZQ       reduce using rule 17 (NP2_NombreFunc -> .)

    NP2_NombreFunc                 shift and go to state 28

state 25

    (16) funcionP -> tipo cuerpo_funcion . REGRESA expresion

    REGRESA         shift and go to state 29


state 26

    (24) declaracionP -> ID NP4_Variable . declaracionPPP declaracionPP
    (28) declaracionPPP -> . ASIGNACION expresion
    (29) declaracionPPP -> . declaracion_lista NP6_Lista
    (30) declaracionPPP -> . empty
    (31) declaracion_lista -> . ASIGNACION lista
    (32) declaracion_lista -> . CORCHETE_IZQ CTE_INT CORCHETE_DER
    (123) empty -> .

    ASIGNACION      shift and go to state 31
    CORCHETE_IZQ    shift and go to state 34
    COMA            reduce using rule 123 (empty -> .)
    FUNC            reduce using rule 123 (empty -> .)
    VAR_INT         reduce using rule 123 (empty -> .)
    VAR_DEC         reduce using rule 123 (empty -> .)
    VAR_STRING      reduce using rule 123 (empty -> .)
    VAR_BOOL        reduce using rule 123 (empty -> .)
    INICIO          reduce using rule 123 (empty -> .)
    $end            reduce using rule 123 (empty -> .)
    PUNTOYCOMA      reduce using rule 123 (empty -> .)

    declaracionPPP                 shift and go to state 30
    declaracion_lista              shift and go to state 32
    empty                          shift and go to state 33

state 27

    (1) programa -> NP1_DirProced definicion INICIO NP7_Inicio LLAVE_IZQ . instruccion LLAVE_DER definicion imprimir
    (6) instruccion -> . declaracion PUNTOYCOMA instruccion
    (7) instruccion -> . llamada PUNTOYCOMA instruccion
    (8) instruccion -> . asignacion PUNTOYCOMA instruccion
    (9) instruccion -> . condicion instruccion
    (10) instruccion -> . ciclo instruccion
    (11) instruccion -> . empty
    (23) declaracion -> . tipo declaracionP
    (46) llamada -> . funcionEspecial
    (47) llamada -> . ID LLAVE_IZQ llamadaP LLAVE_DER
    (34) asignacion -> . ID asignacionP ASIGNACION expresion
    (37) condicion -> . SI PAREN_IZQ expresion PAREN_DER LLAVE_IZQ instruccion LLAVE_DER condicionP
    (43) ciclo -> . MIENTRAS PAREN_IZQ expresion PAREN_DER LLAVE_IZQ instruccion LLAVE_DER
    (44) ciclo -> . REPETIR repetir LLAVE_IZQ instruccion LLAVE_DER
    (123) empty -> .
    (95) tipo -> . VAR_INT
    (96) tipo -> . VAR_DEC
    (97) tipo -> . VAR_STRING
    (98) tipo -> . VAR_BOOL
    (101) funcionEspecial -> . COLOCAR PAREN_IZQ expresion COMA expresion COMA expresion PAREN_DER
    (102) funcionEspecial -> . MOVER PAREN_IZQ expresion PAREN_DER
    (103) funcionEspecial -> . ROTAR PAREN_IZQ expresion PAREN_DER
    (104) funcionEspecial -> . GIRAR_DER PAREN_IZQ PAREN_DER
    (105) funcionEspecial -> . GIRAR_IZQ PAREN_IZQ PAREN_DER
    (106) funcionEspecial -> . CAMINO_LIBRE PAREN_IZQ PAREN_DER
    (107) funcionEspecial -> . DETECCION PAREN_IZQ PAREN_DER
    (108) funcionEspecial -> . OCULTAR PAREN_IZQ expresion PAREN_DER
    (109) funcionEspecial -> . POSICION PAREN_IZQ expresion COMA expresion PAREN_DER
    (110) funcionEspecial -> . MAPA_CUAD PAREN_IZQ expresion PAREN_DER
    (111) funcionEspecial -> . RECOGER_OBJ PAREN_IZQ PAREN_DER
    (112) funcionEspecial -> . DEJAR_OBJ PAREN_IZQ PAREN_DER
    (113) funcionEspecial -> . SALTAR PAREN_IZQ PAREN_DER
    (114) funcionEspecial -> . MATAR_ENEMY PAREN_IZQ PAREN_DER
    (115) funcionEspecial -> . COLOR PAREN_IZQ expresion PAREN_DER
    (116) funcionEspecial -> . TRAZO PAREN_IZQ expresion COMA expresion PAREN_DER
    (117) funcionEspecial -> . LEER PAREN_IZQ leerP PAREN_DER
    (118) funcionEspecial -> . ESCRIBIR PAREN_IZQ expresion PAREN_DER
    (119) funcionEspecial -> . MOSTRAR_VALOR PAREN_IZQ expresion PAREN_DER
    (120) funcionEspecial -> . FIN PAREN_IZQ PAREN_DER

    ID              shift and go to state 43
    SI              shift and go to state 44
    MIENTRAS        shift and go to state 45
    REPETIR         shift and go to state 46
    LLAVE_DER       reduce using rule 123 (empty -> .)
    VAR_INT         shift and go to state 10
    VAR_DEC         shift and go to state 11
    VAR_STRING      shift and go to state 12
    VAR_BOOL        shift and go to state 13
    COLOCAR         shift and go to state 47
    MOVER           shift and go to state 48
    ROTAR           shift and go to state 49
    GIRAR_DER       shift and go to state 50
    GIRAR_IZQ       shift and go to state 51
    CAMINO_LIBRE    shift and go to state 52
    DETECCION       shift and go to state 53
    OCULTAR         shift and go to state 54
    POSICION        shift and go to state 55
    MAPA_CUAD       shift and go to state 56
    RECOGER_OBJ     shift and go to state 57
    DEJAR_OBJ       shift and go to state 58
    SALTAR          shift and go to state 59
    MATAR_ENEMY     shift and go to state 60
    COLOR           shift and go to state 61
    TRAZO           shift and go to state 62
    LEER            shift and go to state 63
    ESCRIBIR        shift and go to state 64
    MOSTRAR_VALOR   shift and go to state 65
    FIN             shift and go to state 66

    instruccion                    shift and go to state 35
    declaracion                    shift and go to state 36
    llamada                        shift and go to state 37
    asignacion                     shift and go to state 38
    condicion                      shift and go to state 39
    ciclo                          shift and go to state 40
    empty                          shift and go to state 41
    tipo                           shift and go to state 9
    funcionEspecial                shift and go to state 42

state 28

    (18) cuerpo_funcion -> ID NP2_NombreFunc . PAREN_IZQ parametro PAREN_DER LLAVE_IZQ instruccion LLAVE_DER

    PAREN_IZQ       shift and go to state 67


state 29

    (16) funcionP -> tipo cuerpo_funcion REGRESA . expresion
    (53) expresion -> . subExp expresionP
    (57) subExp -> . subExpP exp subExpPP
    (58) subExpP -> . NEGACION
    (59) subExpP -> . empty
    (123) empty -> .

    NEGACION        shift and go to state 71
    PAREN_IZQ       reduce using rule 123 (empty -> .)
    MAS             reduce using rule 123 (empty -> .)
    MENOS           reduce using rule 123 (empty -> .)
    ID              reduce using rule 123 (empty -> .)
    NULO            reduce using rule 123 (empty -> .)
    CTE_INT         reduce using rule 123 (empty -> .)
    CTE_DEC         reduce using rule 123 (empty -> .)
    CTE_STRING      reduce using rule 123 (empty -> .)
    COLOCAR         reduce using rule 123 (empty -> .)
    MOVER           reduce using rule 123 (empty -> .)
    ROTAR           reduce using rule 123 (empty -> .)
    GIRAR_DER       reduce using rule 123 (empty -> .)
    GIRAR_IZQ       reduce using rule 123 (empty -> .)
    CAMINO_LIBRE    reduce using rule 123 (empty -> .)
    DETECCION       reduce using rule 123 (empty -> .)
    OCULTAR         reduce using rule 123 (empty -> .)
    POSICION        reduce using rule 123 (empty -> .)
    MAPA_CUAD       reduce using rule 123 (empty -> .)
    RECOGER_OBJ     reduce using rule 123 (empty -> .)
    DEJAR_OBJ       reduce using rule 123 (empty -> .)
    SALTAR          reduce using rule 123 (empty -> .)
    MATAR_ENEMY     reduce using rule 123 (empty -> .)
    COLOR           reduce using rule 123 (empty -> .)
    TRAZO           reduce using rule 123 (empty -> .)
    LEER            reduce using rule 123 (empty -> .)
    ESCRIBIR        reduce using rule 123 (empty -> .)
    MOSTRAR_VALOR   reduce using rule 123 (empty -> .)
    FIN             reduce using rule 123 (empty -> .)
    VERDADERO       reduce using rule 123 (empty -> .)
    FALSO           reduce using rule 123 (empty -> .)

    expresion                      shift and go to state 68
    subExp                         shift and go to state 69
    subExpP                        shift and go to state 70
    empty                          shift and go to state 72

state 30

    (24) declaracionP -> ID NP4_Variable declaracionPPP . declaracionPP
    (25) declaracionPP -> . COMA declaracionP
    (26) declaracionPP -> . empty
    (123) empty -> .

    COMA            shift and go to state 74
    FUNC            reduce using rule 123 (empty -> .)
    VAR_INT         reduce using rule 123 (empty -> .)
    VAR_DEC         reduce using rule 123 (empty -> .)
    VAR_STRING      reduce using rule 123 (empty -> .)
    VAR_BOOL        reduce using rule 123 (empty -> .)
    INICIO          reduce using rule 123 (empty -> .)
    $end            reduce using rule 123 (empty -> .)
    PUNTOYCOMA      reduce using rule 123 (empty -> .)

    declaracionPP                  shift and go to state 73
    empty                          shift and go to state 75

state 31

    (28) declaracionPPP -> ASIGNACION . expresion
    (31) declaracion_lista -> ASIGNACION . lista
    (53) expresion -> . subExp expresionP
    (87) lista -> . CORCHETE_IZQ listaVacia CORCHETE_DER
    (57) subExp -> . subExpP exp subExpPP
    (58) subExpP -> . NEGACION
    (59) subExpP -> . empty
    (123) empty -> .

    CORCHETE_IZQ    shift and go to state 78
    NEGACION        shift and go to state 71
    PAREN_IZQ       reduce using rule 123 (empty -> .)
    MAS             reduce using rule 123 (empty -> .)
    MENOS           reduce using rule 123 (empty -> .)
    ID              reduce using rule 123 (empty -> .)
    NULO            reduce using rule 123 (empty -> .)
    CTE_INT         reduce using rule 123 (empty -> .)
    CTE_DEC         reduce using rule 123 (empty -> .)
    CTE_STRING      reduce using rule 123 (empty -> .)
    COLOCAR         reduce using rule 123 (empty -> .)
    MOVER           reduce using rule 123 (empty -> .)
    ROTAR           reduce using rule 123 (empty -> .)
    GIRAR_DER       reduce using rule 123 (empty -> .)
    GIRAR_IZQ       reduce using rule 123 (empty -> .)
    CAMINO_LIBRE    reduce using rule 123 (empty -> .)
    DETECCION       reduce using rule 123 (empty -> .)
    OCULTAR         reduce using rule 123 (empty -> .)
    POSICION        reduce using rule 123 (empty -> .)
    MAPA_CUAD       reduce using rule 123 (empty -> .)
    RECOGER_OBJ     reduce using rule 123 (empty -> .)
    DEJAR_OBJ       reduce using rule 123 (empty -> .)
    SALTAR          reduce using rule 123 (empty -> .)
    MATAR_ENEMY     reduce using rule 123 (empty -> .)
    COLOR           reduce using rule 123 (empty -> .)
    TRAZO           reduce using rule 123 (empty -> .)
    LEER            reduce using rule 123 (empty -> .)
    ESCRIBIR        reduce using rule 123 (empty -> .)
    MOSTRAR_VALOR   reduce using rule 123 (empty -> .)
    FIN             reduce using rule 123 (empty -> .)
    VERDADERO       reduce using rule 123 (empty -> .)
    FALSO           reduce using rule 123 (empty -> .)

    expresion                      shift and go to state 76
    lista                          shift and go to state 77
    subExp                         shift and go to state 69
    subExpP                        shift and go to state 70
    empty                          shift and go to state 72

state 32

    (29) declaracionPPP -> declaracion_lista . NP6_Lista
    (52) NP6_Lista -> .

    COMA            reduce using rule 52 (NP6_Lista -> .)
    FUNC            reduce using rule 52 (NP6_Lista -> .)
    VAR_INT         reduce using rule 52 (NP6_Lista -> .)
    VAR_DEC         reduce using rule 52 (NP6_Lista -> .)
    VAR_STRING      reduce using rule 52 (NP6_Lista -> .)
    VAR_BOOL        reduce using rule 52 (NP6_Lista -> .)
    INICIO          reduce using rule 52 (NP6_Lista -> .)
    $end            reduce using rule 52 (NP6_Lista -> .)
    PUNTOYCOMA      reduce using rule 52 (NP6_Lista -> .)

    NP6_Lista                      shift and go to state 79

state 33

    (30) declaracionPPP -> empty .
